  sessions simultaneously using different tun interfaces.
7.Optimize IpToPeerMap for faster lookup using a trie.
8.Print a notice if a route we're trying to add already exists,
  perhaps will make it easier to debug issues.
9.Resolve DNS queries using a background thread, to make it
  possible to interrupt slow DNS queries.
10.IPv6 endpoint was printed incorrectly on the Advanced tab

2018-10-08 - TunSafe v1.4

Changes:
1.Show a couple of more error strings when failing to edit registry.
2.Allow # comments in config file inside of a line
3.Enable persistent keepalive timer on sent handshakes

2018-08-11 - TunSafe v1.4-rc1

Changes:
1.Subfolders in the Config/ directory now show up as submenus.
2.Added a way to run TunSafe as a Windows Service.
  Foreground Mode: The service will disconnect when TunSafe closes.
  Background Mode: The service will stay connected in the background.
  No longer required to run the TunSafe client as Admin as long as
  the service is running.
3.New config setting [Interface].ExcludedIPs to configure IPs that
  should not be routed through TunSafe.
4.Can now automatically start TunSafe when Windows starts
5.New UI with tabs and graphs
6.Cache DNS queries to ensure DNS will succeed if connection fails
7.Recreate tray icon when explorer.exe restarts
8.Renamed window title to TunSafe instead of TunSafe VPN Client
9.Main window is now resizable
10.Disallow roaming endpoint when using AllowedIPs=0.0.0.0/0
   Only the original endpoint is added in the routing table so
   this would result in an endless loop of packets.
11.Display approximate Wireguard framing overhead in stats
12.Preparations for protocol handling with multiple threads
13.Delete the routes we made when disconnecting
14.Fix error message about unable to delete a route when connecting

2018-06-20 - TunSafe v1.3-rc3

Changes:
1.Add option to block Internet traffic outside of TunSafe. Either
  based on firewall rules, or by adding a null route, or both.